--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11161,3 +11161,13 @@ footer .gravatar {
   border-radius: 50%;
 }
 
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
+
