--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,3 +57,12 @@ footer {
     border-radius: 50%;
   }
 }
+
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+  .gravatar {
+    float: none;
+    max-width: 100px;
+  }
+}
